; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_old-and-busted.c_parse_entries_xml.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_old-and-busted.c_parse_entries_xml.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.entries_accumulator = type { i32, i32*, i32*, i32* }

@handle_start_tag = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"XML parser failed in '%s'\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i8*, i32, i32*, i32*)* @parse_entries_xml to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @parse_entries_xml(i8* %0, i32* %1, i8* %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.entries_accumulator, align 8
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = getelementptr inbounds %struct.entries_accumulator, %struct.entries_accumulator* %14, i32 0, i32 3
  store i32* %15, i32** %16, align 8
  %17 = load i32*, i32** %11, align 8
  %18 = getelementptr inbounds %struct.entries_accumulator, %struct.entries_accumulator* %14, i32 0, i32 2
  store i32* %17, i32** %18, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = call i32 @svn_pool_create(i32* %19)
  %21 = getelementptr inbounds %struct.entries_accumulator, %struct.entries_accumulator* %14, i32 0, i32 0
  store i32 %20, i32* %21, align 8
  %22 = load i32, i32* @handle_start_tag, align 4
  %23 = load i32*, i32** %12, align 8
  %24 = call i32* @svn_xml_make_parser(%struct.entries_accumulator* %14, i32 %22, i32* null, i32* null, i32* %23)
  store i32* %24, i32** %13, align 8
  %25 = load i32*, i32** %13, align 8
  %26 = getelementptr inbounds %struct.entries_accumulator, %struct.entries_accumulator* %14, i32 0, i32 1
  store i32* %25, i32** %26, align 8
  %27 = load i32*, i32** %13, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* @TRUE, align 4
  %31 = call i32 @svn_xml_parse(i32* %27, i8* %28, i32 %29, i32 %30)
  %32 = load i32*, i32** %12, align 8
  %33 = call i32 @_(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %34 = load i8*, i8** %7, align 8
  %35 = load i32*, i32** %12, align 8
  %36 = call i32 @svn_dirent_local_style(i8* %34, i32* %35)
  %37 = call i32 @apr_psprintf(i32* %32, i32 %33, i32 %36)
  %38 = call i32 @SVN_ERR_W(i32 %31, i32 %37)
  %39 = getelementptr inbounds %struct.entries_accumulator, %struct.entries_accumulator* %14, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @svn_pool_destroy(i32 %40)
  %42 = load i32*, i32** %13, align 8
  %43 = call i32 @svn_xml_free_parser(i32* %42)
  %44 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %44
}

declare dso_local i32 @svn_pool_create(i32*) #1

declare dso_local i32* @svn_xml_make_parser(%struct.entries_accumulator*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @SVN_ERR_W(i32, i32) #1

declare dso_local i32 @svn_xml_parse(i32*, i8*, i32, i32) #1

declare dso_local i32 @apr_psprintf(i32*, i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @svn_dirent_local_style(i8*, i32*) #1

declare dso_local i32 @svn_pool_destroy(i32) #1

declare dso_local i32 @svn_xml_free_parser(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
